feat: add OpenAPI documentation and Swagger UI (#2)

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -19,4 +19,5 @@ printpdf = "0.7"
 uuid = { version = "*", features = ["v4"] }
 dotenvy = "*"
 time = "*"
-
+utoipa = { version = "5.4.0", features = ["axum_extras", "chrono" ] }
+utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
